--- a/starter-code/apple-pie-starter-code/index.html
+++ b/starter-code/apple-pie-starter-code/index.html
@@ -10,10 +10,10 @@
     </header>
     <section>
       <p>
-        This was my grandmother's apple pie recipe. I have never seen another
-        one quite like it. It will always be my favorite and has won me several
-        first place prizes in local competitions. I hope it becomes one of your
-        favorites as well!
+        This was my vngfb fbfbb grandmother's apple pie recipe. I have never
+        seen another one quite like it. It will always be my favorite and has
+        won me several first place prizes in local competitions. I hope it
+        becomes one of your favorites as well!
       </p>
       <img src="images/recipe-info.png" alt="recipe-details" class="centered" />
     </section>
